# UniPD-Assignment2

./: .gitignore  Cose da fare.odt  README.md
Rail/: CMakeLists.txt  line_description.txt  line_description_1.txt  line_description_2.txt  main.cpp  output.txt  output_1.txt  readme.txt  timetables.txt  timetables_1.txt  timetables_2.txt  timetables_3.txt
Rail/include/: AVTrain.h  LocalStation.h  MainStation.h  My_func.h  Rail.h  Railway.h  RegionalTrain.h  SecondaryStation.h  Station.h  SuperAVTrain.h  Train.h
Rail/includes/: Rail.h
Rail/src/: AVTrain.cpp  LocalStation.cpp  MainStation.cpp  My_func.cpp  Rail.cpp  Railway.cpp  Railway0.cpp  Railway0.txt  RegionalTrain.cpp  SecondaryStation.cpp  Station.cpp  SuperAVTrain.cpp  Train.cpp  line_description.txt  line_description1.txt  main.cpp  prova.cpp  timetables_3.txt
Rail/src/timetables/: timetables.txt
Rail_old/: CMakeLists.txt
Rail_old/include/: Railway.h  Station.h  Train.h
Rail_old/src/: AVTrain.cpp  MainStation.cpp  Rail.cpp  Railway.cpp  Railway0.cpp  Station.cpp  Train.cpp
